[package]
name = "lb-latency"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/handewo/lb-latency"
description = "A light load balance proxy"
readme = "README.md"
keywords = ["load balance"]
categories = ["network-programming", "asynchronous"]

[dependencies]
tokio = { version = "1.38", features = ["full"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5.10", features = ["derive"] }
clap_derive = "4.5.8"
warp = "0.3"
